--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Index.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Index.cshtml
@@ -7,15 +7,18 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create",null, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Kategorie.Nazwa)
+            Data Dodania
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Statusy.Nazwa)
+            Kategoria
+        </th>
+        <th>
+            Status
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Nazwa)
@@ -23,17 +26,15 @@
         <th>
             @Html.DisplayNameFor(model => model.Opis)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Komentarz)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Uzytkownik)
-        </th>
+        <th>User</th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.DataDodania)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Kategorie.Nazwa)
         </td>
@@ -47,15 +48,13 @@
             @Html.DisplayFor(modelItem => item.Opis)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Komentarz)
+            @Html.DisplayFor(m => item.Uzytkownik)
         </td>
+        
         <td>
-            @Html.DisplayFor(modelItem => item.Uzytkownik)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |*@
+            @Html.ActionLink("Szczegóły", "Details", new { id = item.Id })
+            @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
         </td>
     </tr>
 }
