Dodanie pola w tabeli kategorie symulujacego administratora, dodanie seeda do migracji w celu autoamtycznego tworzenia konta administratora, ustawienie wyswietlania opcji edycji zgloszenia w przypadku bycia administratorem bądź specjalista w danej kategorii

--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
@@ -52,7 +52,7 @@
     </dl>
 </div>
 <p>
-    @if (User.Identity.Name == "b@b.b")
+    @if (ViewBag.admin)
     {
         @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id })
     }
