--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Index.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create",null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Dodaj zgłoszenie", "Create",null, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
