Dodanie modelu dla tabeli Wiadomosci, dodanie migracji, działania na celu synchronizacji logowania na obu aplikacjach, modyfikowanie dodatków dla specjalistów oraz administratora

--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
@@ -52,9 +52,9 @@
     </dl>
 </div>
 <p>
-    @if (ViewBag.admin)
+    @if (ViewBag.edycja == 1)
     {
-        @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id })
+        @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }, new {@class = "btn btn-warning" })
     }
     
     @Html.ActionLink("Powrót", "Index", null, new { @class = "btn btn-primary" })
