--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_LoginPartial.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,10 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
+        @if (User.Identity.Name == "admin@admin.pl")
+        {
+            <li>@Html.ActionLink("Dodaj uzytkownika", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        }
         <li>
             @Html.ActionLink("Witaj, " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
@@ -16,7 +20,8 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        @*<li>@Html.ActionLink("Zarejestruj", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
+               
         <li>@Html.ActionLink("Zaloguj", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
+< a href = "~/Controllers/ManageController.cs" > ~/ Controllers / ManageController.cs </ a >
 }
