--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Manage/ChangePassword.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Manage/ChangePassword.cshtml
@@ -11,12 +11,17 @@
     <h4>Formularz zmiany hasła</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+
+    if(ViewBag.ukryj == 0)
+    {
+        <div class="form-group">
+            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
+    }
+
     <div class="form-group">
         @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
