--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_LoginPartial.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             <li>@Html.ActionLink("Dodaj uzytkownika", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         }
         <li>
-            @Html.ActionLink("Witaj, " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Witaj, " + User.Identity.GetUserName() + "!", "ChangePassword", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a></li>
     </ul>
