Dodanie weryfikacji po stronie backendu zabezpieczajacego atakom bezposrednio przez url w celu usunięcia, bądź edytowania nie swojego zgłoszenia

--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
@@ -54,9 +54,15 @@
 <p>
     @if (ViewBag.edycja == 1)
     {
-        @Html.ActionLink("Edytuj", "Edit", new { id = Model.Zgloszenia.Id }, new {@class = "btn btn-warning" })
+        @Html.ActionLink("Edytuj", "Edit", new { id = Model.Zgloszenia.Id }, new { @class = "btn btn-warning" })
     }
-    
+    @if (ViewBag.adm == 1)
+    {
+        @Html.ActionLink("Usuń", "Delete", new { id = Model.Zgloszenia.Id }, new { @class = "btn btn-warning" })
+    }
+
+
+
     @Html.ActionLink("Powrót", "Index", null, new { @class = "btn btn-primary" })
 </p>
 
