--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Zgloszenias/Details.cshtml
@@ -6,7 +6,7 @@
 
 
 <div>
-    <h4>Zgloszenia</h4>
+    <h4> </h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -52,14 +52,16 @@
     </dl>
 </div>
 <p>
+    @if (ViewBag.adm == 1)
+    {
+        @Html.ActionLink("Usuń", "Delete", new { id = Model.Zgloszenia.Id }, new { @class = "btn btn-danger" })
+    }
+
     @if (ViewBag.edycja == 1)
     {
         @Html.ActionLink("Edytuj", "Edit", new { id = Model.Zgloszenia.Id }, new { @class = "btn btn-warning" })
     }
-    @if (ViewBag.adm == 1)
-    {
-        @Html.ActionLink("Usuń", "Delete", new { id = Model.Zgloszenia.Id }, new { @class = "btn btn-warning" })
-    }
+
 
 
 
@@ -68,16 +70,17 @@
 
 <hr />
 <br />
+<h4>Wiadomości</h4>
 <div>
     <table class="table">
         <tr>
-            <th>
+            <th width="15%">
                 Data Dodania
             </th>
-            <th>
+            <th width="65%">
                 Treść
             </th>
-            <th>
+            <th width="20%">
                 Nadawca
             </th>
         </tr>
@@ -103,22 +106,22 @@
     {
         @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Zgloszenia</h4>
+    <div >
+        <h4>Wyślij wiadomość</h4>
         <hr />
-        <div class="form-group">
-            @Html.LabelFor(model => model.Wiad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-12">
-                @Html.EditorFor(model => model.Wiad, new { htmlAttributes = new { @class = "form-control" } })
+        <div >
+            @*@Html.LabelFor(model => model.Wiad, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            @*<div class="col-md-12">*@
+                @Html.TextAreaFor(model => model.Wiad,10,55, new { htmlAttributes = new { @class = "max-width = 400px" } })
                 @Html.ValidationMessageFor(model => model.Wiad, "", new { @class = "text-danger" })
-            </div>
+            @*</div>*@
         </div>
         @Html.HiddenFor(m => m.idwiad)
         @Html.HiddenFor(m => m.nad)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Details" class="btn btn-default" />
+                <input type="submit" value="Wyślij" class="btn btn-success" />
             </div>
         </div>
     </div>
