--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Home/Contact.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Home/Contact.cshtml
@@ -1,17 +1,93 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</br></br>
+<div class="jumbotron jumbotron-sm">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-12">
+                <h1 class="h1">
+                    Masz jakieś pytania ?<small></br>Skontkatuj się z nami</small>
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="well well-sm">
+                <form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="name">
+                                    Imię
+                                </label>
+                                <input type="text" class="form-control" id="name" placeholder="Imie" required="required" />
+                            </div>
+                            <div class="form-group">
+                                <label for="email">
+                                    Email
+                                </label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <span class="glyphicon glyphicon-envelope"></span>
+                                    </span>
+                                    <input type="email" class="form-control" id="email" placeholder="Email" required="required" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">
+                                    Temat związany z :
+                                </label>
+                                <select id="subject" name="subject" class="form-control" required="required">
+                                    <option value="na" selected="">Wybierz z :</option>
+                                    <option value="service">Klienci serwis</option>
+                                    <option value="suggestions">Sugestie</option>
+                                    <option value="product">Sprzedaż</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="name">
+                                    Wiadomość
+                                </label>
+                                <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
+                                          placeholder="Wiadomość"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
+                                Wyślij wiadomość
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <form>
+                <legend><span class="glyphicon glyphicon-globe"></span>Dane kontaktowe :</legend>
+                <address>
+                    <strong>Grupa </strong><br>
+                    Łomża PWsip<br>
+                    ul. Akadmicka 14, <br>
+                    <abbr title="Telefon">
+                        Tel :
+                    </abbr>
+                    (123) 456-7890
+                </address>
+                <address>
+                    <strong>Help Desk</strong><br>
+                    <a href="mailto:#">Help-Desk_Grupa_2@HelpDesk.com</a>
+                </address>
+            </form>
+        </div>
+    </div>
+</div>
