--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Home/Index.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Home/Index.cshtml
@@ -1,31 +1,108 @@
 ﻿@{
+
     ViewBag.Title = "Home Page";
 }
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        <div class="container">
+            <div class="row">
+                   <div class="col-md-12">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
+
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="~/Content/Zdjecia/help3.png" />
+                            </div>
+                            <div class="item">
+                                <img src="~/Content/Zdjecia/help1.png" />
+                            </div>
+                            <div class="item">
+                                <img src="~/Content/Zdjecia/help2.png" />
+                            </div>
+                        </div>
+
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a><a class="right carousel-control"
+                               href="#carousel-example-generic" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right">
+                            </span>
+                        </a>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="push">
+        </div>
+        <h1><center><b>6 korzyści wdrożenia nowoczesnego helpdesk-u</b></center></h1>
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Baza wiedzy</h2>
+                <p>
+                    To jedna z „najbardziej widocznych” funkcji oprogramowania helpdesk,
+                    dzięki której można stworzyć poradniki dla pracowników,
+                    przedstawiające rozwiązania najprostszych problemów.
+                    W wyniku jej wdrożenia specjaliści pomocy technicznej mogą skupić się na
+                    bardziej złożonych zgłoszeniach.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h2>Automatyzacja procesów</h2>
+                <p>
+                    Automatyzacje upraszczające proces obsługi zgłoszeń są dostępne
+                    w wybranych systemach helpdesk od dłuższego czasu. Umożliwiają tworzenie
+                    indywidualnych reguł do różnych scenariuszy, które mogą wystąpić w obiegu zgłoszeń
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h2>Mobilność</h2>
+                <p>
+                    Większość problemów da się rozwiązać zdalnie, ale niektóre wymagają
+                    osobistej wizyty w danej lokalizacji.
+                    Jak w czasie podróży zarządzać zgłoszeniami? Kluczową funkcją każdego nowoczesnego
+                    systemu helpdesk jest dostępność z poziomu urządzeń mobilnych, co zapewnia szybką reakcję
+                    na krytyczne problemy z dowolnego miejsca na świecie.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h2>Odświeżanie w czasie rzeczywistym</h2>
+                <p>
+                    Warto zwrócić uwagę, czy oprogramowanie typu helpdesk posiada
+                    funkcję odświeżania wątków/zgłoszeń oraz powiadomienia w czasie
+                    rzeczywistym. Umożliwiają one płynne i szybsze procesowanie zgłoszeń.
+                    Dodatkową zaletą jest kategoryzacja zgłoszeń, dzięki której od razu wiemy,
+                    jakiego typu problemu możemy się spodziewać.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h2>Historia zgłoszeń w jednym miejscu</h2>
+                <p>
+                    Ta funkcja ułatwia analizę działań użytkowników i pozwala ustalić
+                    , kto lub co jest najczęstszą przyczyną występowania usterek w
+                    firmowej sieci. Analiza tego typu danych pozwala podjąć konkretne
+                    kroki naprawcze, które zminimalizują występowanie awarii w przyszłości:
+                    skierowanie najbardziej destruktywnych pracowników na szkolenie
+                    z bezpieczeństwa IT bądź zakup nowego sprzętu, który zastąpi wadliwy.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h2>Dane na lokalnym serwerze</h2>
+                <p>
+                    Choć promowane są rozwiązania w chmurze, tylko lokalna baza danych
+                    zapewnia w pełni bezpieczną wymianę informacji, ponieważ dane na temat
+                    usterek i awarii nigdy nie wychodzą poza firmę. To bardzo ważne szczególnie
+                    w przypadku firm notowanych na giełdzie, gdzie przeciek takich informacji
+                    może skutkować spadkiem notowań, utratą zaufania przez akcjonariuszy czy reputacji firmy.
+                </p>
+            </div>
+        </div>
