--- a/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/HelpDesk_Web/HelpDesk/HelpDesk/Views/Shared/_Layout.cshtml
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title — moja aplikacja platformy ASP.NET</title>
+    <title>@ViewBag.Title Help - desk Grupa 2</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+   
 </head>
-<body>
+<body >
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -34,8 +34,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year — moja aplikacja platformy ASP.NET</p>
-        </footer>
+            <p>&copy; @DateTime.Now.Year Help - desk Grupa 2</p>
+          </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
